# robarma-py

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pyproject.toml  requirements.txt
robarma/: __init__.py  _robarma.pyi
src/: bindings.cpp
tests/: test_robarma.py
